# nanopy

./: .clang-tidy  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  ghtest-gpu.py  ghtest.py  nanopy-wallet  nanopy.conf  nanopy.ini  pyproject.toml  pyrai.py  requirements.txt  setup.py  test-wallet-coverage.sh  work-performance.py
.github/workflows/: docs.yml  nanopy.yml
docs/: Ip ky  conf.py  index.rst  install.rst
nanopy/: __init__.py  rpc.py  work.c
src/nanopy/: __init__.py  cli.py  ext.c  opencl_program.h  rpc.py
src/nanopy/ed25519-donna/: ed25519-donna-portable.h
tests/: __init__.py  ed25519.csv  nanopy_test.py  test_cli.py  test_ext.py  test_nanopy.py  test_nanopy_cli.py  test_nanopy_ext.py  test_rpc.py  work.csv
