[build-system]
requires = ["setuptools", "setuptools-scm[simple]"]
build-backend = "setuptools.build_meta"

[project]
name = "nanopy"
description = "Python implementation of NANO currency related functions"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "coverage", "mnemonic", "mypy", "pykeepass", "pylint[spelling]", "requests", "sphinx-autodoc-typehints", "types-requests", "websocket-client"]
test = ["mnemonic", "platformdirs", "pykeepass"]

[project.scripts]
nanopy = "nanopy.cli:main"

[project.urls]
Repository = "https://github.com/nkr0/nanopy"
Documentation = "https://nkr0.github.io/nanopy"

[tool.coverage.run]
omit = ["src/nanopy/rpc.py"]

[tool.coverage.report]
fail_under = 100

[tool.mypy]
files = "src, tests"
strict = true
