[build-system]
requires = ["setuptools", "setuptools-scm[simple]"]
build-backend = "setuptools.build_meta"

[project]
name = "nanopy"
description = "Python implementation of NANO currency related functions"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["jsonschema", "mnemonic", "platformdirs", "pykeepass", "requests", "websocket-client"]

[project.optional-dependencies]
dev = ["black", "coverage", "mypy", "pylint", "sphinx-autodoc-typehints", "types-jsonschema", "types-requests"]

[project.scripts]
nanopy = "nanopy.cli:main"

[project.urls]
Repository = "https://github.com/nkr0/nanopy"
Documentation = "https://nkr0.github.io/nanopy"

[tool.cibuildwheel]
test-command = "python -m unittest"
test-sources = ["tests"]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = ["src/nanopy/rpc.py"]

[tool.isort]
profile = "black"

[tool.mypy]
files = "src, tests"
strict = true
